fixed sizing/spacing on main page

--- a/assets/style.css
+++ b/assets/style.css
@@ -42,7 +42,8 @@ h6 {
     position:absolute;
     bottom: 0;
     width:100%;
-    height: 100px;
+    height: 111px;
+    border-top: 1px solid#cacaca;
   }
   
   .marketing-site-footer-bottom p,
@@ -62,7 +63,7 @@ h6 {
 
   .marketing-site-footer-bottom-links{
     position: relative;
-    margin-bottom: 60px;
+    bottom: 30px;
   }
   
   @media screen and (max-width: 63.9375em) {
